[package]
name = "better-vdf"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A VDF serialization file format using serde"
repository = "https://github.com/MarkV43/better-vdf"
readme = "README.md"
authors = ["Marcelo Vogt <marcelovogt43@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
